corrected the swagger documentation  of responces
